Commit including a detailed outline with the new direction of the paper that we want to write using the orientation dependent aluminum data that we've been collecting

--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@
 \pagestyle{fancy}
 \fancyhead{}
 \lfoot{Cody A. Dennett}
-\cfoot{TG Orientation Mapping}
+\cfoot{MD TG Simulations}
 \rfoot{\thepage}
 \renewcommand{\footrulewidth}{0.4pt}
 \renewcommand{\headrulewidth}{0pt}
@@ -46,7 +46,7 @@
   \begin{@twocolumnfalse}
 
 \begin{center}
-\LARGE{\textsc{Transient Grating Aluminum Orientation Outline}}
+\LARGE{\textsc{Molecular Dynamics Simulations of Laser-Induced Surface Acoustic Waves}}
 
 \vspace{1pc}
 
@@ -69,8 +69,8 @@ Department of Nuclear Science and Engineering, MIT, Cambridge, MA
 \section{Introduction}
 \input{section1.tex}
 
-\section{Background}
-\input{section2.tex}
+% \section{Background}
+% \input{section2.tex}
 
 \section{Methods}
 \input{section3.tex}
