--- a/section4.tex
+++ b/section4.tex
@@ -1,17 +1,75 @@
 %Results
- 
-\subsection{Molecular Dynamics Results}
-\begin{itemize}
-\item Al \{111\}
-\item Al \{100\}
-\item Cu?
-\end{itemize}
 
 \subsection{Experimental Results}
 \begin{itemize}
-\item Al \{111\}
 \item Al \{100\}
-\item W (no change?)
-\item Want plots of angle versus max propagation frequency for all samples, can even go and back out Young's modulus if we can measure the density. 
-\item At least one temporal and spectral trace (insets?) from representative data from one sample
+	\begin{itemize}
+	\item Measurements at 4-5 different grating spacings (2.05, 2.75, 3.7, 4.x, 5.5 um).
+	\item Measurements over 180$^{\circ}$ in 10$^{\circ}$ increments, known symmetry periodicity.
+	\end{itemize}
+\item Al \{111\}
+	\begin{itemize}
+	\item Measurements at 4-5 different grating spacings (2.05, 2.75, 3.7, 4.x, 5.5 um).
+	\item Measurements over 120$^{\circ}$ in 10$^{\circ}$ increments, known symmetry periodicity.
+	\end{itemize}
+\item W \{100\}
+	\begin{itemize}
+	\item Measurements over 180$^{\circ}$ in 10$^{\circ}$ increments, known symmetry periodicity. Make these measurements with goal of finding no change and using the statistical error we find as a baseline for the error in our experimental SAW velocity determination. 
+	\end{itemize}
 \end{itemize}
+
+\subsection{Theoretical Predictions}
+\begin{itemize}
+\item Al \{100\}
+	\begin{itemize}
+	\item Predicts a xx\% variation with a periodicity of 90\%.
+	\item Possibility of PSAWs?
+	\end{itemize}
+\item Al \{111\}
+	\begin{itemize}
+	\item Predicts a xx\% variation with a periodicity of 60\%.
+	\item Possibility of PSAWs?
+	\end{itemize}
+\item W \{100\}
+	\begin{itemize}
+	\item Predicts a xx\% (small, resolution defining) variation with a periodicity of 90\%.
+	\end{itemize}
+\end{itemize}
+
+\subsection{Molecular Dynamics Results}
+\begin{itemize}
+\item Al \{100\}
+	\begin{itemize}
+	\item Scaling, measured at nine different effective SAW wavelengths.
+	\item Relative orientation, measured at xx wavelength. Data taken along xx directions on each surface which should correspond to the minimum and maximum speeds along that surface. 
+	\item For all of these simulations, discussion of the number of modes you see in the response. You'll see the plate mode since the simulation volume in line with the excitation direction is so thin. It is the next mode up in frequency that corresponds to the SAW that is detected in experiment. See this as the lowest order mode is the same for different orientations of Al. 
+	\end{itemize}
+\item Al \{111\}
+	\begin{itemize}
+	\item Scaling, measured at six different effective SAW wavelengths.
+	\item \textbf{One figure with scaling data from both orientations of Al.}
+	\item Relative orientation, measured at xx wavelength. Data taken along XX directions on each surface which should correspond to the minimum and maximum speeds along the surface. 
+	\end{itemize}
+\item Cu \{100\} (?)
+\end{itemize}
+ 
+
+
+
+
+
+% \subsection{Molecular Dynamics Results}
+% \begin{itemize}
+% \item Al \{111\}
+% \item Al \{100\}
+% \item Cu?
+% \end{itemize}
+
+% \subsection{Experimental Results}
+% \begin{itemize}
+% \item Al \{111\}
+% \item Al \{100\}
+% \item W (no change?)
+% \item Want plots of angle versus max propagation frequency for all samples, can even go and back out Young's modulus if we can measure the density. 
+% \item At least one temporal and spectral trace (insets?) from representative data from one sample
+% \end{itemize}
