Shortened and focused the intro and background sections

--- a/2015Disoriented.tex
+++ b/2015Disoriented.tex
@@ -9,68 +9,45 @@
 \usepackage{babel}
 \begin{document}
 
-\title{Building the Bridge to Predictive, Mesoscale Radiation Materials
-Science: An Example from Transient Grating Spectroscopy}
+\title{Simulating Transient Grating Spectroscopy with Molecular Dynamics:
+Bridging the Gap to Direct Mesoscale Measurements}
 
 
-\author{C. Dennett, P. Cao, A. Vega-Flick, S. E. Ferry, A. A. Maznev, K.
-A. Nelson, M. P. Short}
+\author{C. Dennett, P. Cao, A. Vega-Flick, A. A. Maznev, K. A. Nelson, M.
+P. Short}
 \maketitle
 \begin{abstract}
-Understanding and predicting mesoscale material properties requires
-a synchronzied effort among theory, simulations, and experiments.
-Predictive simulations represent the way to guiding and understanding
-mesoscale experiments, as theories of mesoscale material response
-have yet to mature. We show the application of transient grating (TG)
-spectroscopy as an illustrative method to bridge the gap towards understanding
-mesoscale radiation-induced material property changes. Classical,
-non-equilibrium molecular dynamics (MD) simulations are shown to accurately
-predict theoretically-predicted and experimentally-measured changes
-in Young's modulus due to small variations in anisotropic single crystal
-orientation, at levels similar to those induced by irradiation. With
-the ability of predictive MD to simulate the TG signal validated by
-both theory and experiment, it can be used as a tool to both guide
-and understand TG experiments of materials with defect populations,
-which current theories cannot yet describe. In addition, the results
-illustrate the usage of TG spectroscopy to rapidly determine unknown
-single crystal orientations.
+We demonstrate that classical molecular dynamics (MD) simulations
+can be used to accurately simulate orientation-based changes in Young's
+modulus in transient grating (TG) experiments, by comparing with experimental
+measurements and theoretical predictions. The agreement between theory,
+simulation, and experiment gives confidence in classical MD as a predictive
+tool to simulate defect-based changes in Young's modulus, which cannot
+yet be fully treated by theory. This ability is of critical importance
+when using TG spectroscopy to measure material property changes induced
+by radiation damage, which may vary by amounts formerly too small
+for reliable \emph{in-situ} detection.
 \end{abstract}
 
 \section{Introduction}
 
-The mesoscale frontier of science is ripe with opportunities for discovery
-{[}REF - Crabtree and Sarrao{]}, with the ultimate goal of linking
+The frontier of mesoscale science (MSS) is ripe with opportunities
+for discovery \cite{Sarrao2015}, with the ultimate goal of linking
 atomistic, unit processes with component-level performance. Since
-its inception {[}REF - Middle Way{]}, those in the growing field of
-mesoscale science (MSS) seek to understand the mechanistic reasons
-for the evolution of material properties not just from defects, but
-also from defect populations, superstructures, and spatiotemporal
-variations. However, significant difficulty arises in the direct theoretical
-prediction and the experimental measurement of mesoscale properties
-of materials. Theory often treats response functions, such as that
-of elasticity or thermal conductivity, as a superposition of a homogeneous
-medium with a mathematically convenient distribution of single defects.
-Analytical treatment of a complex material, containing a wide variety
-of defect types, sizes, and spatial distributions, is beyond mesoscale
-theory at the moment. In these cases experimental measurements can
-yield insights to elucidate underlying theories, though direct mesoscale
-measurements continue to prove difficult to perform, or even conceive.
-
-Examples of emerging mesoscale fields exist throughout the literature,
-ranging from strain rate-dependent flow in amorphous materials {[}REF{]},
-to stress corrosion cracking {[}REF{]}, to {[}MORE{]}. Radiation damage
-provides an excellent example of the need for such an approach, as
-no unified theory can yet predict the response of an arbitrary material
-to radiation damage. In fact, the standardized unit of measure, the
-displacements per atom (DPA), is not a measurement, but a calculated
-exposure parameter. It does not account for the differing defect populations
-(point defects, dislocations, voids, precipitates, stacking faults...)
-responsible for the determination of material properties of interest,
-reflected in multiple datasets of differing radiation damage response
-at identical DPA levels, with different environmental parameters {[}REFs{]}.
-In this case, directly coupled mesoscale predictions and measurements
-are needed to understand and predict radiation's effects on material
-property changes.
+its inception \cite{Laughlin1999}, those in the growing field of
+MSS seek to understand the mechanistic reasons for the evolution of
+material properties not just from defects, but also from defect populations,
+superstructures, and spatiotemporal variations. However, significant
+difficulty arises in the direct theoretical prediction and experimental
+measurement of mesoscale material properties. Theory often treats
+response functions, such as that of elasticity or thermal conductivity,
+as a superposition of a homogeneous medium with a mathematically convenient
+distribution of single defects. Analytical treatment of a complex
+material, containing a wide variety of defect types, sizes, and spatial
+distributions, is beyond mesoscale theory at the moment. In these
+cases experimental measurements can yield insights to elucidate underlying
+theories, though direct mesoscale measurements continue to prove difficult
+to perform, or even conceive.
 
 Ideally, one would develop experimental ideas based on a basis of
 theory, and then use simulations to understand the mechanism of the
@@ -78,50 +55,28 @@ response. Another potential path for success is to use simulations
 as a predictive tool, validated by theory, to simultaneously guide
 and understand experimental measurements. For a field without a fully
 described theoretical framework, such as mesoscale radiation materials
-science, this second path is the only path. However, it cannot proceed
-without first rigorously validating the simulation framework using
-theoretical predictions and well-understood experimental measurements.
+science, this second path is the only viable one. However, it cannot
+proceed without first rigorously validating the simulation framework
+using theoretical predictions and well-understood experimental measurements.
+In the absence of fully-developed theory, predictive simulations and
+experimental measurements must be able to directly show radiation-induced
+changes in material properties over mesoscale (10's to 100's of micron)
+volumes, with enough sensitivity to exclude confounding effects.
 
-One promising tool for direct, mesoscale measurements is transient
-grating (TG) spectroscopy \cite{Rogers2000}. This technique projects
-a sinusoidal pattern of laser light onto a material on the order of
-100 microns in width, allowing for direct mesoscale measurement of
-elastic constants, thermal conductivity, and acoustic damping of surface
-acoustic waves (SAWs). Its ability to discern changes in material
-properties due to underlying defect populations depends strongly on
-the repeatable sensitivity of the measurement itself. Because these
-material properties can be anisotropic in solid materials, and this
-anisotropy can grow tremendously with irradiation {[}REF{]}, knowing
-the precise surface-normal orientation \emph{and} relative rotation
-of the crystal face are critical to the sensitivity of the measurement.
-The nature of most of the measurements made using TG spectroscopy
-in the past has precluded the need for such detailed, careful studies.
-Most studies have focused on determining thermal transport in transparent
-liquids {[}REF{]}, or SAW propagation on elastically isotropic solids
-\cite{Hofmann2015,Hofmann2015a}. Most studies simply do not account
-for surface rotation in the measurements, instead relegating resultant
-measurement variations to experimental error {[}REFs{]}. Even the
-quality of the surface makes an enormous difference, with 8-27\% differences
-in SAW speed reported on common steels as a function of the method
-of surface preparation \cite{Kitazawa2015}.
-
-These approaches may have worked for the quantities measured in previous
-studies, but in radiation materials science, quantities like the Young's
-modulus must be reliably determined to 100's of parts per million
-(ppm). This is due to the fact that radiation-induced defects change
-elastic constants in well-defined, though small, amounts. Vacancies
-have been analytically \cite{Dienes1952,Nabarro1952,Dienes1952a}
-and computationally \cite{Chiesa2009} shown to change elastic constants
-on the order one percent per percent concentration. Interstitial atoms
-are predicted to have an effect between two \cite{Chiesa2009} and
-ten \cite{Dienes1952,Nabarro1952,Dienes1952a} times as strong in
-magnitude. These defects are found in levels from $\mathrm{10^{-10}}$
-to $\mathrm{10^{-4}}$ atom fraction for vacancies from room temperature
-to the melting point, respectively, and at levels thousands of times
-lower for interstitials. Radiation damage can increase vacancy concentrations
-to a theoretical maximum of one percent during intense irradiation
-\cite{Averback1977}. Dislocations change the Young's modulus via
-Equation \ref{eq:Dislocation-Youngs-Modulus-Change}:
+In radiation materials science, quantities like the Young's modulus
+must be reliably determined to 100's of parts per million (ppm). This
+is due to the fact that radiation-induced defects change elastic constants
+in well-defined, though small, amounts. Vacancies have been analytically
+and computationally shown to change elastic constants on the order
+one percent per percent concentration. Interstitial atoms are predicted
+to have an effect between two \cite{Chiesa2009} and ten \cite{Dienes1952,Nabarro1952,Dienes1952a}
+times as strong in magnitude. These defects are found in levels from
+$\mathrm{10^{-10}}$ to $\mathrm{10^{-4}}$ atom fraction for vacancies
+from room temperature to the melting point, respectively, and at levels
+thousands of times lower for interstitials. Radiation damage can increase
+vacancy concentrations to a theoretical maximum of one percent during
+intense irradiation \cite{Averback1977}. Irradiation can also create
+dislocations, which change the Young's modulus via Equation \ref{eq:Dislocation-Youngs-Modulus-Change}:
 \begin{equation}
 \frac{\Delta E}{E}=\frac{\pi k\rho_{\bot}L^{2}}{3\, ln\left(\frac{L}{\left|\overrightarrow{b}\right|}\right)\,}\label{eq:Dislocation-Youngs-Modulus-Change}
 \end{equation}
@@ -134,6 +89,18 @@ the Young's modulus by a magnitude on the order of their volume fraction.
 In all cases, resolving changes in the Young's modulus well below
 1\% is critical to the usage of TG spectroscopy as a mesoscale measurement
 technique for radiation damage.
+
+One promising tool for direct, mesoscale measurements is transient
+grating (TG) spectroscopy \cite{Rogers2000}. This technique projects
+a sinusoidal pattern of laser light onto a material on the order of
+100 microns in width, allowing for direct mesoscale measurement of
+elastic constants, thermal conductivity, and acoustic damping of surface
+acoustic waves (SAWs). Its ability to discern changes in material
+properties due to underlying defect populations depends strongly on
+the repeatable sensitivity of the measurement itself. Because these
+material properties can be anisotropic in solid materials, knowing
+the precise surface-normal orientation \emph{and} relative rotation
+of the crystal face are critical to the sensitivity of the measurement.
 
 Measurement of the anisotropy of the Young's modulus provides a convenient
 method of validating both the experimental technique and the simulation
@@ -153,41 +120,28 @@ a very low degree of anisotropy, like aluminum, which exhibits the
 second lowest anisotropy ratio $\left(A=1.22\right)$ only to tungsten
 $\left(A=1.01\right)$ \cite{Simmons1971}, resulting in expected
 changes in SAW speed of fractions of a percent per degree of rotation.
-Should the TG measurements made on materials like aluminum be discernible,
-they will simultaneously qualify the technique for the study of fine
-changes in Young's modulus, and set a lower bound on the noise-based
-sensitivity of the TG spectroscopy technique. It should also be noted
-that irradiation has been shown to increase the anisotropy of \_\_\_
-{[}REF{]}, helping to more confidently transition the application
-of TG spectroscopy from pure materials to irradiated materials.
+Radiation has even been shown to change the anisotropy ratio of tungsten
+\cite{Hofmann2015}, which would represent another test of the simulation
+and experimental techniques where theory is still lacking. Should
+orientation-based TG measurements made on materials like aluminum
+be discernible, they will simultaneously qualify the technique for
+the study of fine changes in Young's modulus, and set a lower bound
+on the noise-based sensitivity of the TG spectroscopy technique. In
+addition, correctly predicting these orientation-based changes in
+the TG signal will validate classical MD as a predictive tool for
+such small changes in Young's modulus.
 
 In this manuscript, we show the application of transient grating (TG)
-spectroscopy to measuring one quantity of interest in radiation materials
-science, the Young's modulus, within the limits of sensitivity for
-expected changes due to irradiation. We then hypothesize that classical
-molecular dynamics (MD) is an appropriate tool for simulating the
-linear elastic response of materials to the type of excitation used
-in transient grating spectroscopy for single crystal metals, therefore
-making it an appropriate predictive tool. Two model materials, pure
-Al and Cu single crystals, are chosen to elucidate the sensitivity
-limits of such a measurement by rotating the crystal, and measuring
-orientation-dependent Rayleigh wave speeds from projected TGs. Then,
-classical MD simulations are used to simulate the TG spectroscopy
-signal on identical materials at different orientations. These combined
-experimental and simulated results are plotted on theoretically predicted
-slowness surfaces using the elastodynamic Green's function {[}REF{]},
-showing excellent agreement. Scaled-down MD simulations are shown
-to predict larger-scale TG response, setting a lower limit of simulation
-scale applicable to predicting TG measurements. With theory, simulation,
-and experiment in agreement, work can now proceed to predict and measure
-materials with defect populations, forging ahead into an area without
-a full theoretical underpinning, but with confidence in mesoscale
-simulations as a quantitative, predictive tool.
-
-In addition, the utility of TG spectroscopy to determine unknown crystal
-orientations by similar rotational measurements is demonstrated, as
-a potentially more rapid and accessible alternative to Laue backscatter
-diffraction or electron backscatter diffraction (EBSD).
+spectroscopy to measuring the Young's modulus within the limits of
+sensitivity for expected changes due to irradiation. We then hypothesize
+that classical MD can predict the linear elastic response of materials
+within levels expected to change due to irradiation. A lower size
+limit of \_\_\_nm for MD simulations is shown to retain excellent
+scaling with experiments to less than \_\_\% absolute error, and \_\_\%
+relative error for different crystal orientations. This imparts confidence
+in the ability of classical MD to predict the response of materials
+with mesoscale defect populations, such as those due to irradiation,
+where theory cannot yet describe them.
 
 
 \section{Methods}
