--- a/2015Disoriented.bib
+++ b/2015Disoriented.bib
@@ -30,6 +30,7 @@
   Month                    = apr,
   Pages                    = {49--51},
   Volume                   = {386â388},
+
   Abstract                 = {The recently developed magnetic potential for ferromagnetic BCC Fe [S.L. Dudarev, P.M. Derlet, J. Phys. ondens. Mat. 17 (2005) 7097; P.M. Derlet, S.L. Dudarev, Prog. Mater. Sci. 52 (2007) 299] is used to investigate the change in the elastic constants of bcc Î±-Fe as a function of a concentration of interstitial and vacancy defects. The results are discussed in terms of experiment and current theoretical understanding.},
   Booktitle                = {Fusion Reactor MaterialsProceedings of the Thirteenth International Conference on Fusion Reactor Materials},
   ISSN                     = {0022-3115},
@@ -47,6 +48,7 @@
   Month                    = {Apr},
   Pages                    = {228--234},
   Volume                   = {86},
+
   Doi                      = {10.1103/PhysRev.86.228},
   Issue                    = {2},
   Numpages                 = {0},
@@ -65,6 +67,7 @@
   Month                    = {Aug},
   Pages                    = {666--666},
   Volume                   = {87},
+
   Doi                      = {10.1103/PhysRev.87.666},
   Issue                    = {4},
   Numpages                 = {0},
@@ -84,8 +87,8 @@
   Number                   = {351},
   Pages                    = {444--448},
   Volume                   = {44},
-  Abstract                 = {Summary In his recent theory of work hardening, Mott assumes that face-centred cubic crystals usually contain, prior to deformation, a network of dislocations, as suggested first by Frank; and he computes the decrease in the modulus of rigidity due to the existence of such a network. His computation may be extended to solid solutions, if one assumes the dislocations to be ?pinned down? by the solute atoms. Thus the addition of solute atoms will always at first increase the shear modulus, though larger concentrations may lead to a decrease. An anomaly of the type predicted has actually been observed by Bradfield and Pursey (1953) for small concentrations in copper alloys. One deduces from Bradfield's recent measurements an average length of about 10-5 cm for the dislocations of the network; and the small value of the anomaly for pure copper perhaps indicates that a large fraction of the dislocations are sessile. The anomaly has also been observed for silver alloys. It disappears after long annealing at 650°c, probably by formation of loose Cottrell clouds.
-Summary In his recent theory of work hardening, Mott assumes that face-centred cubic crystals usually contain, prior to deformation, a network of dislocations, as suggested first by Frank; and he computes the decrease in the modulus of rigidity due to the existence of such a network. His computation may be extended to solid solutions, if one assumes the dislocations to be ?pinned down? by the solute atoms. Thus the addition of solute atoms will always at first increase the shear modulus, though larger concentrations may lead to a decrease. An anomaly of the type predicted has actually been observed by Bradfield and Pursey (1953) for small concentrations in copper alloys. One deduces from Bradfield's recent measurements an average length of about 10-5 cm for the dislocations of the network; and the small value of the anomaly for pure copper perhaps indicates that a large fraction of the dislocations are sessile. The anomaly has also been observed for silver alloys. It disappears after long annealing at 650°c, probably by formation of loose Cottrell clouds.},
+
+  Abstract                 = {Summary In his recent theory of work hardening, Mott assumes that face-centred cubic crystals usually contain, prior to deformation, a network of dislocations, as suggested first by Frank; and he computes the decrease in the modulus of rigidity due to the existence of such a network. His computation may be extended to solid solutions, if one assumes the dislocations to be ?pinned down? by the solute atoms. Thus the addition of solute atoms will always at first increase the shear modulus, though larger concentrations may lead to a decrease. An anomaly of the type predicted has actually been observed by Bradfield and Pursey (1953) for small concentrations in copper alloys. One deduces from Bradfield's recent measurements an average length of about 10-5 cm for the dislocations of the network; and the small value of the anomaly for pure copper perhaps indicates that a large fraction of the dislocations are sessile. The anomaly has also been observed for silver alloys. It disappears after long annealing at 650°c, probably by formation of loose Cottrell clouds. Summary In his recent theory of work hardening, Mott assumes that face-centred cubic crystals usually contain, prior to deformation, a network of dislocations, as suggested first by Frank; and he computes the decrease in the modulus of rigidity due to the existence of such a network. His computation may be extended to solid solutions, if one assumes the dislocations to be ?pinned down? by the solute atoms. Thus the addition of solute atoms will always at first increase the shear modulus, though larger concentrations may lead to a decrease. An anomaly of the type predicted has actually been observed by Bradfield and Pursey (1953) for small concentrations in copper alloys. One deduces from Bradfield's recent measurements an average length of about 10-5 cm for the dislocations of the network; and the small value of the anomaly for pure copper perhaps indicates that a large fraction of the dislocations are sessile. The anomaly has also been observed for silver alloys. It disappears after long annealing at 650°c, probably by formation of loose Cottrell clouds.},
   Booktitle                = {The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
   Comment                  = {doi: 10.1080/14786440408520327},
   Doi                      = {10.1080/14786440408520327},
@@ -105,6 +108,7 @@ Summary In his recent theory of work hardening, Mott assumes that face-centred c
   Month                    = oct,
   Pages                    = {16042--},
   Volume                   = {5},
+
   Abstract                 = {Knowledge of mechanical and physical property evolution due to irradiation damage is essential for the development of future fission and fusion reactors. Ion-irradiation provides an excellent proxy for studying irradiation damage, allowing high damage doses without sample activation. Limited ion-penetration-depth means that only few-micron-thick damaged layers are produced. Substantial effort has been devoted to probing the mechanical properties of these thin implanted layers. Yet, whilst key to reactor design, their thermal transport properties remain largely unexplored due to a lack of suitable measurement techniques. Here we demonstrate non-contact thermal diffusivity measurements in ion-implanted tungsten for nuclear fusion armour. Alloying with transmutation elements and the interaction of retained gas with implantation-induced defects both lead to dramatic reductions in thermal diffusivity. These changes are well captured by our modelling approaches. Our observations have important implications for the design of future fusion power plants.},
   Comment                  = {26527099[pmid]},
   ISSN                     = {2045-2322},
@@ -123,6 +127,7 @@ Summary In his recent theory of work hardening, Mott assumes that face-centred c
   Month                    = may,
   Pages                    = {352--363},
   Volume                   = {89},
+
   Abstract                 = {Abstract Using X-ray micro-diffraction and surface acoustic wave spectroscopy, we measure lattice swelling and elastic modulus changes in a W-1% Re alloy after implantation with 3110 appm of helium. An observed lattice expansion of a fraction of a per cent gives rise to an order of magnitude larger reduction in the surface acoustic wave velocity. A multiscale model, combining elasticity and density functional theory, is applied to the interpretation of observations. The measured lattice swelling is consistent with the relaxation volume of self-interstitial and helium-filled vacancy defects that dominate the helium-implanted material microstructure. Larger scale atomistic simulations using an empirical potential confirm the findings of the elasticity and density functional theory model for swelling. The reduction of surface acoustic wave velocity predicted by density functional theory calculations agrees remarkably well with experimental observations.},
   ISSN                     = {1359-6454},
   Keywords                 = {Helium implantation, Micro-diffraction, Elastic properties, Density functional theory, Empirical potential},
@@ -141,13 +146,26 @@ Summary In his recent theory of work hardening, Mott assumes that face-centred c
   Pages                    = {47--50},
   Volume                   = {786},
 
-  __markedentry            = {[hereiam:6]},
+  __markedentry            = {[hereiam:]},
   Abstract                 = {Abstract The development of a non-destructive, non-contact diagnostic system to detect radiation damage is very important for measuring radioactive materials. A system using surface acoustic waves (SAWs) induced and detected by lasers was developed. The propagation velocities of SAWs on stainless steel irradiated by 20 keV He and Ar ions were investigated, and a tendency for the velocity to increase with an increase in ion irradiation was observed. This tendency may be due to surface modification. A non-linear effect on ion irradiation versus normal surface velocity in the vertical direction was confirmed.},
   ISSN                     = {0168-9002},
   Keywords                 = {Surface acoustic wave, SAW, Nuclear materials, Laser, Ion irradiation},
   Owner                    = {hereiam},
   Timestamp                = {2016.03.30},
   Url                      = {http://www.sciencedirect.com/science/article/pii/S0168900215003599}
+}
+
+@Article{Laughlin1999,
+  Title                    = {The Middle Way},
+  Author                   = {R. B. Laughlin and D. Pines and J. Schmalian and B. P. Stojkovic and P. Wolynes},
+  Journal                  = {PNAS},
+  Year                     = {1999},
+  Number                   = {1},
+  Pages                    = {32-37},
+  Volume                   = {97},
+
+  Owner                    = {hereiam},
+  Timestamp                = {2016.04.04}
 }
 
 @Article{Nabarro1952,
@@ -159,6 +177,7 @@ Summary In his recent theory of work hardening, Mott assumes that face-centred c
   Month                    = {Aug},
   Pages                    = {665--666},
   Volume                   = {87},
+
   Doi                      = {10.1103/PhysRev.87.665.2},
   Issue                    = {4},
   Numpages                 = {0},
@@ -178,8 +197,8 @@ Summary In his recent theory of work hardening, Mott assumes that face-centred c
   Number                   = {1},
   Pages                    = {117--157},
   Volume                   = {30},
-  Abstract                 = {? Abstract?The mechanical and acoustic properties of thin films and multilayer assemblies are important both for technological applications of these materials and for basic scientific studies of their physical behavior. Techniques that use optical methods to monitor acoustic waves stimulated in thin films with short pulsed lasers are useful for accurately and nondestructively characterizing the high frequency acoustic physics of these systems. This review briefly summarizes some of these techniques and focuses on a method known as impulsive stimulated thermal scattering or transient grating photoacoustics. It describes the most advanced experimental techniques for performing this measurement and outlines its application to the study of acoustic waveguide modes in a variety of thin films. These measurements, coupled with models for the physics of the modes, can be used to determine intrinsic mechanical properties of materials and structures that occur, for example, in microelectronics and high-frequency acoustic filters. This article summarizes a selected set of existing applications and concludes with an overview of future directions that include studies of the acoustics of complex microstructures such as microfluidic networks and synthetic phononic crystals.
-? Abstract?The mechanical and acoustic properties of thin films and multilayer assemblies are important both for technological applications of these materials and for basic scientific studies of their physical behavior. Techniques that use optical methods to monitor acoustic waves stimulated in thin films with short pulsed lasers are useful for accurately and nondestructively characterizing the high frequency acoustic physics of these systems. This review briefly summarizes some of these techniques and focuses on a method known as impulsive stimulated thermal scattering or transient grating photoacoustics. It describes the most advanced experimental techniques for performing this measurement and outlines its application to the study of acoustic waveguide modes in a variety of thin films. These measurements, coupled with models for the physics of the modes, can be used to determine intrinsic mechanical properties of materials and structures that occur, for example, in microelectronics and high-frequency acoustic filters. This article summarizes a selected set of existing applications and concludes with an overview of future directions that include studies of the acoustics of complex microstructures such as microfluidic networks and synthetic phononic crystals.},
+
+  Abstract                 = {? Abstract?The mechanical and acoustic properties of thin films and multilayer assemblies are important both for technological applications of these materials and for basic scientific studies of their physical behavior. Techniques that use optical methods to monitor acoustic waves stimulated in thin films with short pulsed lasers are useful for accurately and nondestructively characterizing the high frequency acoustic physics of these systems. This review briefly summarizes some of these techniques and focuses on a method known as impulsive stimulated thermal scattering or transient grating photoacoustics. It describes the most advanced experimental techniques for performing this measurement and outlines its application to the study of acoustic waveguide modes in a variety of thin films. These measurements, coupled with models for the physics of the modes, can be used to determine intrinsic mechanical properties of materials and structures that occur, for example, in microelectronics and high-frequency acoustic filters. This article summarizes a selected set of existing applications and concludes with an overview of future directions that include studies of the acoustics of complex microstructures such as microfluidic networks and synthetic phononic crystals. ? Abstract?The mechanical and acoustic properties of thin films and multilayer assemblies are important both for technological applications of these materials and for basic scientific studies of their physical behavior. Techniques that use optical methods to monitor acoustic waves stimulated in thin films with short pulsed lasers are useful for accurately and nondestructively characterizing the high frequency acoustic physics of these systems. This review briefly summarizes some of these techniques and focuses on a method known as impulsive stimulated thermal scattering or transient grating photoacoustics. It describes the most advanced experimental techniques for performing this measurement and outlines its application to the study of acoustic waveguide modes in a variety of thin films. These measurements, coupled with models for the physics of the modes, can be used to determine intrinsic mechanical properties of materials and structures that occur, for example, in microelectronics and high-frequency acoustic filters. This article summarizes a selected set of existing applications and concludes with an overview of future directions that include studies of the acoustics of complex microstructures such as microfluidic networks and synthetic phononic crystals.},
   Booktitle                = {Annual Review of Materials Science},
   Comment                  = {doi: 10.1146/annurev.matsci.30.1.117},
   Doi                      = {10.1146/annurev.matsci.30.1.117},
@@ -188,6 +207,26 @@ Summary In his recent theory of work hardening, Mott assumes that face-centred c
   Publisher                = {Annual Reviews},
   Timestamp                = {2016.03.30},
   Url                      = {http://dx.doi.org/10.1146/annurev.matsci.30.1.117}
+}
+
+@Article{Sarrao2015,
+  Title                    = {Opportunities and advances in mesoscale science},
+  Author                   = {Sarrao, J.L. and Crabtree, G.W.},
+  Journal                  = {Current Opinion in Solid State and Materials Science},
+  Year                     = {2015},
+
+  Month                    = aug,
+  Number                   = {4},
+  Pages                    = {201--202},
+  Volume                   = {19},
+
+  __markedentry            = {[hereiam:6]},
+  Abstract                 = {Abstract The mesoscale, where the granularity of atoms and the quantization of energy give way to apparently continuous and infinitely divisible matter and energy, opens up a new frontier of scientific opportunity. This opportunity has been embraced by the scientific community and the fruits of the exploration of mesoscale science are beginning to emerge. In this brief introduction, we highlight the themes and directions described in greater detail in the articles that follow. In particular, the implications of mesoscale science for energy storage, high-strength structural composites, magnetic interactions, materials aging, and degradation science, as well as the characterization capabilities necessary to explore these phenomena, are discussed.},
+  Booktitle                = {Opportunities in Mesoscale Science},
+  ISSN                     = {1359-0286},
+  Owner                    = {hereiam},
+  Timestamp                = {2016.04.04},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S1359028615000364}
 }
 
 @Book{Simmons1971,
@@ -211,8 +250,6 @@ Summary In his recent theory of work hardening, Mott assumes that face-centred c
   Month                    = {Jun},
   Pages                    = {846--851},
   Volume                   = {71},
-
-  __markedentry            = {[hereiam:]},
   Doi                      = {10.1103/PhysRev.71.846},
   Issue                    = {12},
   Numpages                 = {0},
